# geo-suite

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
core/: utilities.py
core/kml_file/: logic.py  write_kml_file.py
core/osm/: loader.py
core/txt_file/: constants.py  exceptions.py  logic.py  read_txt_file.py  write_txt_file.py
line_thinner/: __main__.py  config.json  line_thinner.py
multipolygon_fixer/: __main__.py  merge_rings.py
tests/: test_osm_loader.py  test_txt_fixer.py  test_txt_to_kml.py
tests/data/: Battery Abandoned_RenewMap_point.txt  TouristAreas.kml  TouristAreas.txt  TouristAreas_mutlipolygon_fixed.txt  dense_line.txt  dense_line_out.txt
txt_to_kml/: __main__.py
