[tool.poetry]
name = "pipeliner"
version = "0.1.0"
description = ""
authors = ["Naveen Anil <naveenms01@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
